--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accueil | EFC Auto-école</title>
+  <title>EFC Auto-école</title>
   <link rel="stylesheet" href="./public/style/base.css">
   <link rel="stylesheet" href="./public/style/index.css">
   <!-- Bootstrapp -->
@@ -33,7 +33,10 @@
         <h1>Bienvenue sur le site de l'EFC Auto-école</h1>
         <p>Vous souhaitez passer votre permis de conduire ou passer votre code ? Vous êtes au bon endroit !</p>
         <a href="#presentation" class="btn-plus">En savoir plus</a>
-        <div class="presentation" id="presentation">
+
+        <div id="presentation" style="height: 5rem;"></div>
+
+        <div class="presentation">
           <div class="text_presentation">
             <h2>Présentation de l'auto-école <span style="color: #2ea2e1; border-bottom: 3px solid #2ea2e1;">EFC</span> </h2>
             <p>
@@ -50,7 +53,9 @@
           </div>
         </div>
 
-        <div class="voir_nos_formations" id="formations">
+
+        <div id="formations" style="height: 5rem;"></div>
+        <div class="voir_nos_formations">
           <h2>Nos formations</h2>
           <div class="cards_formation">
             <div class="card_formation">
@@ -93,7 +98,9 @@
               </p>
               <a href="" class="btn_formation" data-bs-toggle="modal" data-bs-target="#recuperationModal">En savoir plus</a>
             </div>
+          </div>
         </div>
+        
         <div class="modals_formations">
           <div class="modal-dialog modal-xl">
             <!-- Modal pour les formations du code de la route -->
