--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="accueil">
-      <h1>Bienvenue à l’auto école EFC école de formation et de conduite</h1>
+      <h1>Bienvenue à l’auto école EFC école de formation & de conduite</h1>
       <p>Vous souhaitez passer votre permis de conduire ou passer votre code ? Vous êtes au bon endroit !</p>
       <a href="#presentation" class="btn-plus">En savoir plus</a>
 
@@ -340,27 +340,57 @@
           </div>
 
           <div class="nous_contacter">
-            <h3>Nous contacter</h3>
-            <p>
-              <strong>Téléphone :</strong> <a href="tel:+33745529299">07 45 52 92 99</a> <br>
-              <strong>Email :</strong>
-              <a href="mailto:contact.formationconduite@gmail.com" class="email">contact.formationconduite@gmail.com
-              </a>
-            </p>
-
-
-            <h3>Nous retrouver</h3>
-            <p>
-              Campus Cézanne de Mantes - Centre de Formation EFC<br>
-              7 Rue Paul Gauguin, 78200 Mantes-la-Jolie
-            </p>
+            <h3>Nous contacter :</h3>
+            <form class="contact_form" action="">
+              <div class="identite">
+                <div class="champ_nom">
+                  <label for="name">Nom :</label>
+                  <input type="text" id="name" name="name" placeholder="Nom" required>
+                </div>
+                <div class="champ_prn">
+                  <label for="prn">Prénom :</label>
+                  <input type="text" id="prenom" name="prenom" placeholder="Prénom" required>
+                </div>
+              </div>
+              <div class="container_champs champ_email">
+                <label for="email">Email :</label>
+                <input type="email" id="email" name="email" placeholder="exemple@exemple.com" required>
+              </div>
+              <div class="container_champs champ_tel">
+                <label for="tel">Téléphone :</label>
+                <input type="tel" id="tel" name="tel" placeholder="07..." required>
+              </div>
+              <div class="container_champs champ_message">
+                <label for="message">Message :</label>
+                <textarea id="message" name="message" placeholder="Votre message..." required></textarea>
+              </div>
+              <button class="btn_envoyer" type="submit">Envoyer</button>
+            </form>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
 
       <div class="footer">
+        <!-- Footer avec les contacts & liens -->
+          <div class="footer_contact_logo">
+            <img src="./public/assets/logo_simple.png" alt="Logo EFC Auto-école">
+            <img src="./public/assets/logoqualiopi.png" alt="Logo Qualiopi">
+          </div>
+  
+          <div class="footer_contact_container">
+            <div class="footer_contact_container_contact">
+              <a href="tel:+33745529299">07 45 52 92 99</a>
+              <a href="mailto:contact.formationconduite@gmail.com" class="email">contact.formationconduite@gmail.com</a>
+              <a href="https://maps.app.goo.gl/ZbU8eqQkSaMAb4kcA" target="_blank">7 Rue Paul Gauguin, 78200 Mantes-la-Jolie</a>
+            </div>
+  
+          </div>
         
+        <!--Footer avec les liens -->
       </div>
-</body>
+    </body>
 
 </html>
