debut des cards pour les offres cpf

--- a/index.html
+++ b/index.html
@@ -337,7 +337,34 @@
       <div class="cpf" id="cpf">
         <h2 class="titre_contact">Offres CPF</h2>
         <div class="nos_offres">
-          <!-- 3 offres sous forme de cards  -->
+          <div class="card_offre">
+            <div class="titre">PERMIS B MANUEL ACCELERE + CODE-CONDUITE</div>
+            <div class="lien_cpf"><a class="btn_cpf" href="https://www.moncompteformation.gouv.fr/espace-prive/html/#/formation/recherche/95108131400019_PERMIS1/95108131400019_PERMIS1?contexteFormation=ACTIVITE_PROFESSIONNELLE" target="_blank">Voir l'offre</a></div>
+            <div class="description">
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 12 mois d'accès à la formation du code de la route.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Plus de 6000 questions conformes à l'examen.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 20 heures de conduite avec un enseignant de la conduite.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Un accompagnement administratif et pédagogique.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Examen de conduite compris dans l'offre.
+              </p>
+            </div>
+          </div>
+          <div class="card_offre"></div>
+          <div class="card_offre"></div>
         </div>
       </div>
 
