correction video accueil + ancre cpf

--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
         </div>
       </div>
 
-
-      <div class="cpf" id="cpf">
+      <div id="cpf" style="height: 8rem;"></div>
+      <div class="cpf">
         <h2 class="titre_contact">Offres CPF</h2>
         <div class="nos_offres">
           <div class="card_offre">
