correction style + case cpf

--- a/index.html
+++ b/index.html
@@ -337,9 +337,11 @@
       <div class="cpf">
         <h2 class="titre_contact">Offres CPF</h2>
         <div class="nos_offres">
+
           <div class="card_offre">
-            <div class="titre">PERMIS B MANUEL ACCELERE + CODE-CONDUITE</div>
+            <div class="titre">PERMIS B ACCÉLÉRÉ - CODE + EXAMEN + 20H DE CONDUITE</div>
             <div class="lien_cpf"><a class="btn_cpf" href="https://www.moncompteformation.gouv.fr/espace-prive/html/#/formation/recherche/95108131400019_PERMIS1/95108131400019_PERMIS1?contexteFormation=ACTIVITE_PROFESSIONNELLE" target="_blank">Voir l'offre</a></div>
+            <hr>
             <div class="description">
               <p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
@@ -363,13 +365,71 @@
               </p>
             </div>
           </div>
-          <div class="card_offre"></div>
-          <div class="card_offre"></div>
+
+          <div class="card_offre">
+            <div class="titre">PERMIS PREMIUM B - 15 COURS + E-LEARNING PREPACONDUITE</div>
+            <div class="lien_cpf"><a class="btn_cpf" href="https://www.moncompteformation.gouv.fr/espace-prive/html/#/formation/recherche/95108131400019_PERMIS2/95108131400019_PERMIS2?contexteFormation=ACTIVITE_PROFESSIONNELLE" target="_blank">Voir l'offre</a></div>
+            <hr>
+            <div class="description">
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Une évaluation de départ en ligne.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Préparation à la conduite.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 15 heures de conduite avec un enseignant de la conduite.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Préparation en e-learning.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Un accompagnement à l'examen pratique.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Livret numérique.
+              </p>
+            </div>
+          </div>
+
+          <div class="card_offre">
+            <div class="titre">FORMATION CODE DE LA ROUTE - STAGE INTENSIF</div>
+            <div class="lien_cpf"><a class="btn_cpf" href="https://www.moncompteformation.gouv.fr/espace-prive/html/#/formation/recherche/95108131400019_PERMIS/95108131400019_CODETG?contexteFormation=ACTIVITE_PROFESSIONNELLE" target="_blank">Voir l'offre</a></div>
+            <hr>
+            <div class="description">
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Formation complète sur l'ensemble du code de la route.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Apprentissage des panneaux de signalisation.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Séries d'examens simulés pour préparer à l'examen du code.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Un formateur présent pour répondre à toutes les questions.
+              </p>
+              <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check"><path d="M20 6 9 17l-5-5"/></svg>
+                 Prix d'examen compris dans l'offre.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
-
-      <div class="contact" id="contact">
+      <div id="contact" style="height: 8rem;"></div>
+      <div class="contact">
         <h2 class="titre_contact">Nos Contacts</h2>
         <div class="nos_contacts">
           <div class="nous_retrouver">
