--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
               </div>
               <div class="container_champs champ_tel">
                 <label for="tel">Téléphone :</label>
-                <input type="tel" id="tel" name="tel" placeholder="07 12 34 56 78" required>
+                <input type="tel" id="tel" name="tel" placeholder="07 45 52 92 99" required>
               </div>
               <div class="container_champs champ_message">
                 <label for="message">Message :</label>
@@ -486,8 +486,7 @@
       <div class="footer_contact_container_contact">
         <a href="tel:+33745529299">07 45 52 92 99</a>
         <a href="mailto:contact.formationconduite@gmail.com" class="email">contact.formationconduite@gmail.com</a>
-        <a href="https://maps.app.goo.gl/ZbU8eqQkSaMAb4kcA" target="_blank">7 Rue Paul Gauguin, 78200
-          Mantes-la-Jolie</a>
+        <a href="https://maps.app.goo.gl/ZbU8eqQkSaMAb4kcA" target="_blank">7 Rue Paul Gauguin, 78200 Mantes-la-Jolie</a>
       </div>
 
     </div>
